Bump Android & iOS versions + remove dead code